# col226-assignment8

./: .gitignore  Makefile  README.md  dune-project
frontEnd/: ast.ml  ast_printers.ml  dune  lexer.mll  parser.mly
tests/: dune  input1.txt  test2.txt
unification/: dune  mgu.ml  subst.ml
